correct filters in report page

--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -364,7 +364,7 @@
                 <em ng-show="offer.relativeWeight<=0">(N/A)</em>
               </div>
               <div class="cs-flow-offer-edit clearfix">
-                <input type="text" class="form-control" ng-model="lander.weight" required>
+                <input type="text" class="form-control" ng-model="offer.weight" required>
                 <i ng-click="deleteOffer(offer)" class="material-icons md-mini lander-delete-btn">delete</i>
               </div>
             </div>
