--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -9,32 +9,32 @@
         <div class="col-xs-12 col-sm-12 col-md-7">
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
                 <h3>Visits</h3>
-                <div class="data-num">2,845</div>
+                <div class="data-num">36,393</div>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
-                <h3>Visits</h3>
-                <div class="data-num">2,845</div>
+                <h3>Clicks</h3>
+                <div class="data-num">22,845</div>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
-                <h3>Visits</h3>
-                <div class="data-num">2,845</div>
+                <h3>Conversions</h3>
+                <div class="data-num">845</div>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 data-list-con">
-                <h3>Visits</h3>
-                <div class="data-num">2,845</div>
+                <h3>Revenue</h3>
+                <div class="data-num">8450</div>
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-5">
             <div class="col-xs-4 col-sm-4 col-md-4 data-list-con">
-                <h3>Visits</h3>
-                <div class="data-num">2,845</div>
+                <h3>Cost</h3>
+                <div class="data-num">6000</div>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4 data-list-con">
-                <h3>Visits</h3>
-                <div class="data-num">2,845</div>
+                <h3>Profit</h3>
+                <div class="data-num">2,445</div>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4 data-list-con">
-                <h3>Visits</h3>
+                <h3>ROI</h3>
                 <div class="data-num">2,845</div>
             </div>
         </div>
