--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -67,7 +67,7 @@
                 </a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="app.report.trafficsource" md-ink-ripple>
+                <a ui-sref="app.report.traffic" md-ink-ripple>
                     <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
                     <span>{{'trafficSource' | translate}}</span>
                 </a>
