add affiliate network

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -72,7 +72,12 @@
                     <span>{{'trafficSource' | translate}}</span>
                 </a>
             </li>
-
+            <li ui-sref-active="active">
+                <a ui-sref="app.report.affiliate" md-ink-ripple>
+                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <span>{{'affiliate' | translate}}</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </md-sidenav>
