--- a/Front/src/tpl/affiliateNetwork-edit-dialog.html
+++ b/Front/src/tpl/affiliateNetwork-edit-dialog.html
@@ -9,82 +9,45 @@
 
         <form name="editForm" ng-submit="ctrl.save()" class="form-horizontal">
             <div class="form-group">
-                <label class="col-sm-3 control-label">{{'affiliateNetworkName' | translate}}：</label>
+                <label class="col-sm-3 control-label">{{'affiliateNetworkName' | translate}}<span class="star-icon">*</span>: </label>
                 <div class="col-sm-4">
-                    <input type="text" class="form-control" ng-model="item.name" required>
+                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
+                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
+                    <span ng-show="editForm.name.$error.required">Name is required.</span>
+                    </span>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">{{'affiliateNetworkPostBackUrl' | translate}}: </label>
+                <label class="col-sm-3 control-label">{{'affiliateNetworkPostBackUrl' | translate}}<span class="star-icon">*</span>: </label>
                 <div class="col-sm-4">
-                    <input type="text" class="form-control" ng-model="item.postbackUrl" required>
-                </div>
-            </div>
-            <div class="url-tokens-row form-group">
-                <label class="col-sm-3 control-label"></label>
-                <div class="col-sm-5">
-                    <i>Available URL tokens:</i>
-                    <div class="url-tokens">
-                        <div class="url-token " data-token-value="{campaign.id}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{campaign.id}</span>
-                        </div>
-
-                        <div class="url-token " data-token-value="{trafficsource.id}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{trafficsource.id}</span>
-                        </div>
-
-                        <div class="url-token " data-token-value="{trafficsource.name}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{trafficsource.name}</span>
-                        </div>
-
-                        <div class="url-token " data-token-value="{lander.id}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{lander.id}</span>
-                        </div>
-
-                        <div class="url-token " data-token-value="{device}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{device}</span>
-                        </div>
-
-                        <div class="url-token " data-token-value="{brand}">
-                            <span class="url-token-icon">+</span>
-                            <span class="url-token-caption">{brand}</span>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="col-sm-3 control-label"></label>
-                <div class="col-sm-4">
-                    <input type="checkbox">Append click ID to offer URLs
+                    <input type="text" name="postbackUrl" class="form-control" ng-model="item.postbackUrl" required>
+                    <span style="color:red" ng-show="editForm.postbackUrl.$dirty && editForm.postbackUrl.$invalid">
+                    <span ng-show="editForm.postbackUrl.$error.required">PostbackUrl is required.</span>
+                    </span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label"></label>
                 <div class="col-sm-4">
-                    <input type="checkbox"> Accept duplicate postbacks
+                    <input type="checkbox" ng-model="item.appendClickId" ng-true-value="1" ng-false-value="0">Append click ID to offer URLs
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label"></label>
                 <div class="col-sm-4">
-                    <input type="checkbox"> Only accept postbacks from white-listed IPs
+                    <input type="checkbox" ng-model="item.duplicatedPostback" ng-true-value="1" ng-false-value="0"> Accept duplicate postbacks
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-sm-3 control-label"></label>
                 <div class="col-sm-4">
                     <input type="checkbox" ng-click="isChecked()"> Only accept postbacks from white-listed IPs
                     <div class="network-textarea" ng-show="textareaShow">
                         <i class="note">Please enter one IP per line.</i>
-                        <textarea></textarea>
+                        <textarea ng-model="item.ipWhiteList" name="ipWhiteList" ng-blur="checkIP()"></textarea>
+                        <span style="color:red" ng-show="editForm.ipWhiteList.$dirty && editForm.ipWhiteList.$invalid">
+                        <span ng-show="editForm.ipWhiteList.$error.valid">IP address is valid.</span>
+                        </span>
                     </div>
                 </div>
             </div>
