--- a/Front/src/tpl/affiliateNetwork-edit-dialog.html
+++ b/Front/src/tpl/affiliateNetwork-edit-dialog.html
@@ -1,7 +1,7 @@
 <md-dialog class="cs-edit-dialog" ng-cloak>
     <md-toolbar>
         <div class="md-toolbar-tools">
-            <h2 class="md-title">{{ctrl.title | translate}}</h2>
+            <h2 class="md-title">{{ctrl.title | translate}} - {{ctrl.titleType | translate}}</h2>
         </div>
     </md-toolbar>
 
