--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -97,7 +97,7 @@
                         <td class="traficc-source-input"><input type="text" ng-model="item.cost.Name" disabled></td>
                         <td class="traficc-source-input"></td>
                     </tr>
-                    <tr ng-repeat="param in item.params">
+                    <tr ng-repeat="param in item.params track by $index">
                         <td class="col-sm-3 control-label">Custom variable{{$index+1}}：</td>
                         <td class="traficc-source-input"><input type="text" ng-model="param.Parameter"></td>
                         <td class="traficc-source-input"><input type="text" ng-model="param.Placeholder"></td>
