--- a/Front/src/tpl/affiliateNetwork-edit-dialog.html
+++ b/Front/src/tpl/affiliateNetwork-edit-dialog.html
@@ -44,8 +44,8 @@
                 <div class="col-sm-4">
                     <input type="checkbox" ng-model="ipWhiteCheck"> Only accept postbacks from white-listed IPs
                     <div class="network-textarea" ng-show="ipWhiteCheck">
-                        <i class="note">Please enter one IP per line.</i>
-                        <textarea ng-model="item.ipWhiteList" name="ipWhiteList" ng-blur="checkIP()" ng-required="ipWhiteCheck"></textarea>
+                        <i class="note">Please enter one IP per line.<span class="star-icon">*</span></i>
+                        <textarea ng-model="ipWhiteList" name="ipWhiteList" ng-blur="checkIP()" ng-required="ipWhiteCheck"></textarea>
                         <span style="color:red" ng-show="editForm.ipWhiteList.$dirty && editForm.ipWhiteList.$invalid">
                         <span ng-show="editForm.ipWhiteList.$error.valid">IP address is valid.</span>
                         <span ng-show="editForm.ipWhiteList.$error.required">IP address is not be empty.</span>
