--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -1,8 +1,8 @@
-<div class="cs-page-subheader">
+<!-- <div class="cs-page-subheader">
     <div class="cs-page-crumb">
         <span>{{app.subtitle | translate}}</span>
     </div>
-</div>
+</div> -->
 
 <div flex layout="column" class="cs-page-content dash-board">
     <div class="row data-list">
