--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -5,7 +5,7 @@
         </div>
     </md-toolbar>
 
-    <md-dialog-content class="md-dialog-content">
+    <md-dialog-content class="md-dialog-content edit-page">
 
         <form name="editForm" ng-submit="ctrl.save()" class="form-horizontal">
             <div class="form-group">
