--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -4,17 +4,17 @@
 
         <div flex></div>
         <div class="home">
-            <i class="material-icons" ng-click="toReport()">home</i>
+          <a ui-sref="app.report.campaign"><i class="material-icons">home</i></a>
         </div>
         <div class="setting">
-            <i class="material-icons" ng-click="toSetting()">settings</i>
+          <a ui-sref="setApp.profile"><i class="material-icons">settings</i></a>
         </div>
         <ul class="nav navbar-nav navbar-right">
             <!-- dropdown for user -->
             <li class="dropdown" uib-dropdown>
                 <a href class="dropdown-toggle clear" uib-dropdown-toggle>
                     <i class="material-icons md-mini">&#xE87C;</i>
-                    <span class="hidden-sm hidden-md text-md">{{currentUser.name}}</span>
+                    <span class="hidden-sm hidden-md text-md">{{currentUser.firstname}}</span>
                     <i class="material-icons md-mini">&#xE313;</i>
                 </a>
                 <ul class="dropdown-menu animated fadeInRight w" uib-dropdown-menu>
