affiliate dailog and trafficSourceTemplate dailog update

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -82,7 +82,7 @@
     </nav>
 </md-sidenav>
 
-<md-sidenav class="md-sidenav-left md-whiteframe-z2 cs-left-aside" ng-show="settingNav">
+<!-- <md-sidenav class="md-sidenav-left md-whiteframe-z2 cs-left-aside" ng-show="settingNav">
     <nav ui-nav class="navi clearfix">
         <ul class="nav">
             <li ui-sref-active="active">
@@ -93,7 +93,7 @@
             </li>
         </ul>
     </nav>
-</md-sidenav>
+</md-sidenav> -->
 
 <md-content flex layout="column" class="main-content cs-main-content">
     <div ui-butterbar></div>
