--- a/Front/src/tpl/affiliateNetwork-edit-dialog.html
+++ b/Front/src/tpl/affiliateNetwork-edit-dialog.html
@@ -8,6 +8,14 @@
     <md-dialog-content class="md-dialog-content">
 
         <form name="editForm" ng-submit="ctrl.save()" class="form-horizontal">
+            <div class="form-group traffic-source">
+                <label class="col-sm-3 control-label"></label>
+                <div class="col-sm-5">
+                    <md-button class="md-primary traffic-source-templates" ng-click="trustedAffiliateNetworks($event)">
+                        {{'Trusted affiliate networks' | translate}}
+                    </md-button>
+                </div>
+            </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">{{'affiliateNetworkName' | translate}}<span class="star-icon">*</span>: </label>
                 <div class="col-sm-4">
