--- a/Front/src/tpl/affiliateNetwork-edit-dialog.html
+++ b/Front/src/tpl/affiliateNetwork-edit-dialog.html
@@ -17,10 +17,10 @@
                     </span>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">{{'affiliateNetworkPostBackUrl' | translate}}<span class="star-icon">*</span>: </label>
+            <div class="form-group" ng-show="false">
+                <label class="col-sm-3 control-label">{{'affiliateNetworkPostBackUrl' | translate}}: </label>
                 <div class="col-sm-4">
-                    <input type="url" name="postbackUrl" class="form-control" ng-model="item.postbackUrl" required>
+                    <input type="url" name="postbackUrl" class="form-control" ng-model="item.postbackUrl">
                     <span style="color:red" ng-show="editForm.postbackUrl.$dirty && editForm.postbackUrl.$invalid">
                     <span ng-show="editForm.postbackUrl.$error.required">PostbackUrl is required.</span>
                     <span ng-show="editForm.postbackUrl.$error.url">PostbackUrl must be a valid URL</span>
